fix time slider dragging on touch screen  Gapminder/tools-page#121

--- a/src/components/time-slider/time-slider.scss
+++ b/src/components/time-slider/time-slider.scss
@@ -95,6 +95,7 @@ $color-text: rgb(15, 14, 14);
       color: $vzb-ts-slider-color;
       width: 100%;
       height: 100%;
+      touch-action: none;
       .vzb-ts-slider-axis {
         @include opacity(0.6);
         user-select: none;
